# SDL2-Android-Example

./: CMakeLists.txt  main.cpp
android-project/: download_sdl2_hg.cmake
android-project/thextech/: build.gradle
android-project/thextech/src/main/: AndroidManifest.xml
android-project/thextech/src/main/java/ru/wohlsoft/sdl2testapp/: GameSettings.java  Launcher.java  thextechActivity.java
android-project/thextech/src/main/res/values/: strings.xml
